AC_INIT([Makefile.in], 1.0)

REVISION=`git log --pretty=oneline | wc -l`
APP=ntop-installer
DATE=`date +%y%m%d`
VERSION="1.0.$DATE"

RPM_SIGN_CMD="rpm --addsign"
if test -f "/etc/centos-release"; then
  CENTOS_RELEASE=`cat /etc/centos-release | cut -d ' ' -f 3|cut -d '.' -f 1`
  if test $CENTOS_RELEASE = "release"; then
     CENTOS_RELEASE=`cat /etc/centos-release | cut -d ' ' -f 4|cut -d '.' -f 1`
  fi

  if test "$CENTOS_RELEASE" -ne 8; then
      RPM_SIGN_CMD="./packages/rpm-sign.exp"
  fi
fi
	
AC_SUBST(APP)
AC_SUBST(RPM_SIGN_CMD)
AC_SUBST(VERSION)
AC_SUBST(REVISION)
AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(ntop-installer.spec)
AC_OUTPUT
